--- a/src/components/header-component/header.scss
+++ b/src/components/header-component/header.scss
@@ -7,11 +7,11 @@ header {
     .headerContainer {
             // margin: 0 auto;
             width: 100%;
-            height: 60px;
+            height: 30px;
             display: flex;
             justify-content: space-between;
             // max-width: 1224px;
-            padding: 64px 108px;
+            padding: 32px 108px;
 
             button {
                 border: none; 
@@ -27,18 +27,14 @@ header {
 
         
             a {
-            // color: white;
-            width: 180px;
+            color: #000;
             cursor: pointer;
             display: flex;
-            align-content: center;
-            justify-content: space-between;
-            justify-items: center;
             text-decoration: none; 
 
                 span:last-child {
+                    margin-left: 14px;
                     display: flex;
-                    background-color: red;
                     align-items: center;
                 }
             }
