--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,56 +1,246 @@
-section {
-    margin-top: 2%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
+@import '../styles/common.scss';
 
-    .introContent {
-        width: 50%;
-        // max-width: 600px; 
+.secWrapper {
+    position: relative;
 
-        .textWrapper {
-            .textp1 {
-                margin-top: 20px;
-            }
+    section {
+        margin-bottom: 48px;
+        // height: 80vh;
+        display: block;
+        position: relative;
 
-            .textp2 {
-                margin-top: 64px;
-            }
-        }
+        .introContent {
+            width: 100%;
+    
+            .textWrapper {
 
-        .buttonWrapper {
-
-            p {
-                font-size: 18px;
-                position: relative;
-                display: inline;
-
-                &::before {
-                    content: '';
-                    position: absolute;
-                    z-index: -1;
-                    height: 14px;
-                    width: 90%;
-                    top: 50%;
-                    right: -20px;
-                    background-color: #F8C8C8;;
-                    display: block;
+                .title {
+                    margin-top: 64px;
+                }
+                .textp1 {
+                    margin-top: 24px;
+                }
+    
+                .textp2 {
+                    margin-top: 24px;
                 }
             }
-
-            .buttonHolder {
-                margin-top: 32px;
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-gap: 24px;
+    
+            .buttonWrapper {
+    
+                p {
+                    font-size: 16px;
+                    font-weight: 600;
+                    position: relative;
+                    display: inline;
+    
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        z-index: -1;
+                        height: 14px;
+                        width: 90%;
+                        top: 50%;
+                        right: -20px;
+                        background-color: #F8C8C8;;
+                        display: block;
+                    }
+                }
+    
+                .buttonHolder {
+                    margin-top: 16px;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    grid-gap: 16px;
+                }
             }
+         
         }
-     
     }
 
-    img {
-        width: 400px;
-        height: 500px;
-        object-fit: cover;
+    section:nth-child(2) {
+
+        .Img { 
+        display: none;
+        }
+
+    }
+
+    section:last-child {
+        // display: none;
+        .skillset {
+            width: 100%;
+
+            .skilly {
+                width: 100%;
+                display: block;
+                padding: 8px 0;
+                align-items: center;
+
+                svg {
+                        margin-top: 16px;
+                        // width: 100%;
+                        position: relative;
+
+                    .smiles {
+                        width: 100%;
+                    }
+                    
+                }
+            }
+        }
+    }
+}
+
+@include for-tinnyP-only() {
+
+    .b3, .b4 {
+        grid-column: 1 / 3;
+      }
+
+}
+
+@include for-tablet-only() {
+    .secWrapper {
+        // background: blue;
+
+        section {
+            display: block;
+            
+            .introContent {
+            width: 100%;
+            }
+        }
+
+        section:nth-child(2) {
+            .Img {
+                display: none
+            }
+        }
+    }  
+}
+
+@include for-desktop-only() {
+
+    .secWrapper {
+    
+        section {
+            // border-top: #F8C8C8 1px;
+            // margin-top: 50px;
+            height: 80vh;
+            margin-bottom: 10px;
+            // totally height of section should be the height of view port - height of header
+            // height: calc(100vh - 200px);
+            display: flex;
+            position: relative;
+            align-items: center;
+            justify-content: space-between;
+    
+            
+        
+            .introContent {
+                width: 50%;
+                
+                // max-width: 600px; 
+        
+                .textWrapper {
+    
+                    .title {
+                        margin-top: 164px;
+                    }
+                    .textp1 {
+                        margin-top: 20px;
+                    }
+        
+                    .textp2 {
+                        margin-top: 64px;
+                    }
+                }
+        
+                .buttonWrapper {
+        
+                    p {
+                        font-size: 18px;
+                        font-weight: 600;
+                    }
+        
+                    .buttonHolder {
+                        width: 100%;
+                        justify-items: stretch;
+                        margin-top: 32px;
+                        grid-template-columns: 1fr 1fr;
+                        grid-gap: 24px;
+
+                        .b1 {
+                            width: 100%;
+                            background-color: blue;
+                        }
+                    }
+                }
+             
+            }
+        }
+    
+        section:nth-child(2) {
+            // background-color: red;
+            // position: relative;
+    
+            .Img {
+                display: block;
+            position: fixed;
+            top: 25%;
+            right: 108px;
+    
+                .ImgWrapper {
+                    div {
+                        img {
+                        width: 400px;
+                        height: 500px;
+                        object-fit: cover;
+                        }
+                    }
+    
+                    div:last-child {
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                        transition: 0.5s;
+                        height: 100%;
+                        overflow: hidden;
+                    }
+                }
+       
+            }
+    
+            .Img.nonFixed {
+                width: auto; 
+                position: relative;
+                top: 0vh;
+                right: 0;
+    
+                .ImgWrapper {
+                    div:last-child {
+                        height: 0%;
+                    }
+                } 
+            }
+        }
+    
+        section:last-child {
+            .skillset {
+                width: 50%;
+                padding-left: 50px;
+                margin-left: 50px;
+                border-left: 1px solid #C8C8C8;
+    
+                .skilly {
+                    width: 100%;
+                    justify-content: space-between;
+                    display: flex;
+                    padding: 20px 0;
+                    align-items: center;
+                }
+            }
+        }
     }
 }
