commit of the projectListing page

--- a/src/components/heading-component/heading.scss
+++ b/src/components/heading-component/heading.scss
@@ -22,13 +22,17 @@
     }
 }
 
+@include for-tablet-only () {
+
+    .titleHeading {
+        font-size: 58px;
+    }
+}
+
 @include for-desktop-only () {
 
     .titleHeading {
         font-size: 68px;
-        &::before {
-            background-color: yellow;
-        }
     }
 }
 
