--- a/src/components/header-component/header.scss
+++ b/src/components/header-component/header.scss
@@ -1,38 +1,55 @@
+@import 'src/styles/common.scss';
 
 header {
     width: 100%;
 
     .headerContainer {
-            display: flex;
-            justify-content: space-between;
-            // max-width: 1224px;
-            padding: 32px 108px;
+        display: flex;
+        justify-content: space-between;
+        // max-width: 1224px;
+        padding: 32px 108px;
 
-            button {
-                border: none; 
-                background-color: white;
-                text-decoration: none;
-                cursor: pointer;
-                margin-right: 32px;
-            }
-
-            button:hover {
-                border-bottom: solid 1px black;
-            }
-
-        
-            a {
-            color: #000;
+        button {
+            border: none; 
+            background-color: white;
+            text-decoration: none;
             cursor: pointer;
-            display: flex;
-            text-decoration: none; 
+            margin-right: 32px;
+        }
 
-                span:last-child {
-                    margin-left: 14px;
-                    display: flex;
-                    align-items: center;
-                }
+        button:hover {
+            border-bottom: solid 1px black;
+        }
+
+    
+        a {
+        color: #000;
+        cursor: pointer;
+        display: flex;
+        text-decoration: none; 
+
+            span:last-child {
+                margin-left: 14px;
+                display: flex;
+                align-items: center;
             }
-        
+        } 
+    }
+}
+
+@include for-tablet-only() {
+    header {
+        .headerContainer {
+            // max-width: 1224px;
+            padding: 32px;
+        }
+    }
+}
+
+@include for-desktop-only() {
+    header {
+        .headerContainer {
+            padding: 32px 108px;
+        }
     }
 }
