--- a/src/components/button-component/button.scss
+++ b/src/components/button-component/button.scss
@@ -1,39 +1,55 @@
 @import 'src/styles/common.scss';
 
-.linky {
-    text-decoration: none;
-    color: #000;
-    display: inline-flex;
-    min-width: 100%;
-    background: #F3F3F3;
-    padding: 16px;
-    position: relative;
-    border: 1px solid #000000;
-    transition: transform 0.2s;
+.buttonWapper {
+    width: 100%;
+    &.width {
+        width: inherit;
+    }
 
-    &:hover {
-        color: #fff;
-        background: black;
-        transform: translate(6px, 6px);
-
-        &::before {
-            width: 100%;
-            height: 100%;
-            content: '';
-            // background: #F3F3F3;
-            z-index: -15;
-            padding: 24px;
-            border: 1px solid #000000;
-            position: absolute;
-            top: -6px;
-            left: -6px;
-        } 
+    .linky {
+        text-decoration: none;
+        color: #000;
+        display: inline-flex;
+        width: 100%;
+        background: #F3F3F3;
+        padding: 16px;
+        position: relative;
+        border: 1px solid #000000;
+        transition: transform 0.2s;
+    
+        &:hover {
+            color: #fff;
+            background: black;
+            transform: translate(6px, 6px);
+    
+            &::before {
+                width: 100%;
+                height: 100%;
+                content: '';
+                // background: #F3F3F3;
+                z-index: -15;
+                padding: 24px;
+                border: 1px solid #000000;
+                position: absolute;
+                top: -6px;
+                left: -6px;
+            } 
+        }
     }
 }
 
 @include for-desktop-only {
-    .linky {
+    .buttonWapper {
+        width: 100%;
+        &.width {
+            width: 46%;
+        }
+
+        .linky {
         padding: 24px;
-        min-width: 100%;
+        width: 100%;
+        }
+
     }
+    
 }
