--- a/src/components/header-component/header.scss
+++ b/src/components/header-component/header.scss
@@ -9,31 +9,39 @@ header {
         // max-width: 1224px;
         padding: 32px 108px;
 
-        button {
-            border: none; 
-            background-color: white;
-            text-decoration: none;
-            cursor: pointer;
-            margin-right: 32px;
-        }
+        .headerLink {
+            display: flex;
 
-        button:hover {
-            border-bottom: solid 1px black;
-        }
-
-    
-        a {
-        color: #000;
-        cursor: pointer;
-        display: flex;
-        text-decoration: none; 
-
-            span:last-child {
-                margin-left: 14px;
-                display: flex;
-                align-items: center;
+            a {
+                border: none;
+                color: #000;
+                background-color: white;
+                text-decoration: none;
+                cursor: pointer;
+                margin-right: 32px;
             }
-        } 
+    
+            a:hover {
+                border-bottom: solid 1px black;
+            }
+        }
+
+        .leaveAmessageButton {
+
+            a {
+                color: #000;
+                cursor: pointer;
+                display: flex;
+                text-decoration: none; 
+        
+                span:last-child {
+                    margin-left: 14px;
+                    display: flex;
+                    align-items: center;
+                }
+            }
+        }
+ 
     }
 }
 
@@ -49,7 +57,7 @@ header {
 @include for-desktop-only() {
     header {
         .headerContainer {
-            padding: 32px 108px;
+            padding: 32px 156px;
         }
     }
 }
