--- a/src/components/heading-component/heading.scss
+++ b/src/components/heading-component/heading.scss
@@ -3,7 +3,6 @@
 .titleHeading {
     font-weight: bold;
     font-size: 40px;
-    line-height: 56px;
     color: #000;
     position: relative;
     display: inline-block;
@@ -15,7 +14,8 @@
         position: absolute;
         z-index: -2;
         width: 80%;
-        height: 34px;
+        height: 70%;
+        // height: 34px;
         right: -10px;
         top: 50%;
         background-color: yellow;
