--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,6 +4,7 @@ html {
   /* font-family: sans-serif; */
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
 * {
@@ -46,7 +47,7 @@ header.pageHeader {
 
   .childrenWrapper {
     margin: 0 auto;
-    padding: 64px 108px;
+    padding: 64px 156px;
     background-color: none;
   }
 
