light and darkmode

--- a/src/components/button-component/button.scss
+++ b/src/components/button-component/button.scss
@@ -8,18 +8,19 @@
 
     .linky {
         text-decoration: none;
-        color: #000;
+        color: var(--textNormal);
         display: inline-flex;
         width: 100%;
-        background: #F3F3F3;
+        background: var(--buttonBg);
         padding: 16px;
         position: relative;
-        border: 1px solid #000000;
+        border: 1px solid var(--textNormal);
         transition: transform 0.2s;
     
         &:hover {
             color: #fff;
-            background: black;
+            border: 1px solid var(--buttonHover);
+            background: var(--buttonHover);
             transform: translate(6px, 6px);
     
             &::before {
@@ -29,7 +30,7 @@
                 // background: #F3F3F3;
                 z-index: -15;
                 padding: 24px;
-                border: 1px solid #000000;
+                border: 1px solid var(--textNormal);
                 position: absolute;
                 top: -6px;
                 left: -6px;
