--- a/src/components/heading-component/heading.scss
+++ b/src/components/heading-component/heading.scss
@@ -3,7 +3,7 @@
 .titleHeading {
     font-weight: bold;
     font-size: 40px;
-    color: #000;
+    color: var(--textTitle);
     position: relative;
     display: inline-block;
     margin: 0;
@@ -18,7 +18,7 @@
         // height: 34px;
         right: -10px;
         top: 50%;
-        background-color: yellow;
+        background-color: var(--headingAccent);
     }
 }
 
