responsiveness and interactions

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -10,6 +10,7 @@ html {
 body {
   background-color: var(--bg);
   color: var(--textNormal);
+  position: relative;
 }
 
 * {
@@ -17,43 +18,41 @@ body {
   padding: 0;
 }
 
-header.pageHeader {
-  display: none;
-}
+main {
 
-.childrenWrapper {
-    padding: 24px;
-  }
+  .pageHeader {
+    z-index: 1;
+    display: block;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    transition: box-shadow 0.2s;
 
-  @include for-tablet-only() {
-    header.pageHeader {
-      z-index: 1;
-      display: block;
-      width: 100%;
-      position: fixed;
-      background-color: white;
-      transition: box-shadow 0.2s;
-    }
-
-    .pageHeader.sadow {
-      box-shadow: 0px 16px 25px rgba(0, 0, 0, 0.1);
-    }
-
-    .childrenWrapper {
-      padding: 32px;
-    }
-  }
-
-@include for-desktop-only () {
-
-  .pageHeader.sadow {
+    &.sadow {
     box-shadow: 0px 16px 25px rgba(0, 0, 0, 0.1);
+    }
   }
 
   .childrenWrapper {
-    margin: 0 auto;
-    padding: 64px 8%;
-    background-color: none;
+    padding: 24px;
+
+    &.modalOn {
+      height: 100vh;
+      overflow-y: hidden;
+    } 
+  }
+
+}
+
+@include for-desktop-only () {
+
+  main {
+  
+    .childrenWrapper {
+      padding: 0 6% 0 6%;
+    }
+  
   }
 
 }
