--- a/src/components/header-component/header.scss
+++ b/src/components/header-component/header.scss
@@ -3,88 +3,226 @@
 header {
   width: 100%;
 
+  .hambugerModal {
+    background: var(--bg);
+    opacity: 0.8;
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+    height: 100vh;
+    overflow-y: hidden;
+
+    &.off {
+      display: none;
+    }
+  }
+
   .headerContainer {
+    padding: 12px 24px ;
     background-color: var(--bg);
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 32px;
 
-    .headerLink {
-      display: flex;
+    .logo {
+      width: auto;
+      height: 42px;
 
-      a {
-        border: none;
-        color: var(--textNormal);
-        text-decoration: none;
-        cursor: pointer;
-        margin-right: 32px;
-      }
-
-      a:hover {
-        border-bottom: solid 1px var(--textNormal);;
+      path {
+        stroke: var(--textNormal);
       }
     }
 
-    .leaveAmessageButton {
-      display: flex;
+    .navHolder {
+      margin: 5%;
+      padding: 16px;
+      position: fixed;
+      display: block;
+      // visibility: hidden;
+      width: 90%;
+      background: var(--bg);
+      filter: invert(100%);
+      bottom: 0;
+      left: 0;
+      font-size: 24px;
+      z-index: 10;
 
-      .switch {
-        position: relative;
-        display: inline-block;
-        width: 24px;
-        height: 24px;
+      &.off {
+        display: none;
+      }
 
-        input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
+        .headerLink {
+        display: block;
+        align-self: center;
 
-        .sunnyMoon {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-image: url('../../images/moon.svg');
-            background-position: center;
-            transform: rotate(0deg);
-            transition: transform 0.3s ease-out;
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
+        a {
+          border: none;
+          display: block;
+          margin-bottom: 8px;
+          color: var(--textNormal);
+          text-decoration: none;
+          cursor: pointer;
+          padding: 8px;
+          transition: transform 0.2s ease-out;
 
-        input:checked + .sunnyMoon {
-            background-image: url('../../images/sun.svg');
-            background-size: cover;
-            transform: rotate(180deg);
-
+          &:hover {
+            font-weight: bolder;
+            transform: translateY(-4px);
+            border-bottom: solid 3px var(--textNormal);
           }
-
+        }
 
       }
 
-      a {
-        color: var(--textNormal);;
-        cursor: pointer;
-        display: flex;
-        text-decoration: none;
-        padding-right: 50px;
+      .leaveAmessageButton {
+          align-self: center;
+          margin-top: 32px;
+          border: solid 1px var(--textNormal);
 
-        span:last-child {
-          margin-left: 14px;
+        a {
+          color: var(--textNormal);;
+          cursor: pointer;
           display: flex;
-          align-items: center;
+          text-decoration: none;
+          padding: 8px;
 
-          svg {
-            path {
-              fill: var(--textNormal);
+          span {
+            display: flex;
+            align-items: center;
+            margin-right: 8px;
+
+            svg {
+              path {
+                fill: var(--textNormal);
+              }
             }
           }
         }
       }
     }
+
+    .iconHolder {
+      display: flex;
+      // background: #000;
+      align-items: center;
+
+      .darkLightSwitcher {
+        margin-right: 24px;
+        z-index: 1;
+
+        .switch {
+          position: relative;
+          display: inline-block;
+          width: 32px;
+          height: 32px;
+
+          input {
+              opacity: 0;
+              width: 0;
+              height: 0;
+          }
+
+          .sunnyMoon {
+              position: absolute;
+              cursor: pointer;
+              top: 0;
+              left: 0;
+              right: 0;
+              bottom: 0;
+              background-image: url('../../images/moon.svg');
+              background-position: center;
+              transform: rotate(0deg);
+              transition: transform 0.3s ease-out;
+              background-repeat: no-repeat;
+              background-size: contain;
+          }
+
+          input:checked + .sunnyMoon {
+              background-image: url('../../images/sun.svg');
+              background-size: cover;
+              transform: rotate(180deg);
+
+          }
+        }
+      }
+
+      .hambugerHolder {
+          width: 40px;
+          height: 40px;
+          z-index: 10;
+
+        .hambuger {
+          margin: 4px auto;
+          position: relative;
+          // margin: 50px auto;
+          -webkit-transform: rotate(0deg);
+          -moz-transform: rotate(0deg);
+          -o-transform: rotate(0deg);
+          transform: rotate(0deg);
+          -webkit-transition: .5s ease-in-out;
+          -moz-transition: .5s ease-in-out;
+          -o-transition: .5s ease-in-out;
+          transition: .5s ease-in-out;
+          cursor: pointer;
+  
+          & span {
+            display: block;
+            position: absolute;
+            height: 4px;
+            width: 80%;
+            background-color: var(--textNormal);
+            opacity: 1;
+            left: 0;
+            -webkit-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+            -webkit-transition: .25s ease-in-out;
+            -moz-transition: .25s ease-in-out;
+            -o-transition: .25s ease-in-out;
+            transition: .25s ease-in-out;
+  
+            &:nth-child(1) {
+              top: 0px;
+            }
+            &:nth-child(2) {
+              top: 12px;
+            }
+            &:nth-child(3) {
+              top: 24px;
+            }
+          }
+
+          &.open {
+            margin: 0px auto;
+
+            span {
+              &:nth-child(1) {
+                top: 18px;
+                -webkit-transform: rotate(135deg);
+                -moz-transform: rotate(135deg);
+                -o-transform: rotate(135deg);
+                transform: rotate(135deg);
+              }
+              
+              &:nth-child(2) {
+              opacity: 0;
+              left: -60px;
+              }
+
+              &:nth-child(3) {
+                top: 18px;
+                -webkit-transform: rotate(-135deg);
+                -moz-transform: rotate(-135deg);
+                -o-transform: rotate(-135deg);
+                transform: rotate(-135deg);
+              }
+            } 
+          }
+        }
+      }
+    }
+    
   }
 }
 
@@ -98,9 +236,101 @@ header {
 }
 
 @include for-desktop-only() {
-  header {
-    .headerContainer {
-      padding: 32px 8%;
+    header {
+      width: 100%;
+
+      .hambugerModal {
+        display: none;
+      }
+
+      .headerContainer {
+        padding: 2% 6%;
+        display: flex;
+        align-items: center;
+
+        .logo {
+          // fill: var(--bg);
+          width: auto;
+          height: 56px;
+
+        }
+
+        .navHolder {
+          margin: 0;
+          display: flex;
+          visibility: visible;
+          position: unset;
+          justify-content: space-between;
+          width: 100%;
+          background-color: unset;
+          filter: unset;
+          height: 0;
+          font-size: 18px;
+
+          &.off {
+            display: flex;
+          }
+
+          .headerLink {
+          display: flex;
+
+          a {
+            border: none;
+            display: flex;
+            
+            color: var(--textNormal);
+            text-decoration: none;
+            cursor: pointer;
+            margin-bottom: 0;
+            //padding: 8px;
+            margin-right: 32px;
+            transition: transform 0.2s ease-out;
+
+            &:hover {
+              font-weight: bolder;
+              transform: translateY(-4px);
+              border-bottom: solid 3px var(--textNormal);
+            }
+          }
+
+          }
+
+          .leaveAmessageButton {
+              align-self: center;
+              margin: 0;
+              border: 0;
+
+            a {
+              color: var(--textNormal);;
+              cursor: pointer;
+              display: flex;
+              text-decoration: none;
+              padding-right: 50px;
+
+              span {
+                margin-left: 14px;
+                display: flex;
+                
+                align-items: center;
+              }
+            }
+          }
+        }
+
+        .iconHolder {
+
+          .darkLightSwitcher {
+            margin: 0;
+            .switch {
+              width: 24px;
+              height: 24px;
+            }
+          }
+
+          .hambugerHolder {      
+            display: none;  
+          }   
+        }
+      }
     }
-  }
 }
