--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -51,6 +51,11 @@ main {
   
     .childrenWrapper {
       padding: 0 6% 0 6%;
+
+      &.modalOn {
+        height: unset;
+        overflow-y: scroll;
+      }
     }
   
   }
